--- a/MatrixImplementationC++/LQR_Algebra.cbp
+++ b/MatrixImplementationC++/LQR_Algebra.cbp
@@ -32,6 +32,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="lqr.cpp" />
+		<Unit filename="lqr.hpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="matrix.cpp" />
 		<Unit filename="matrix.hpp" />
